fix: add project page links

--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,8 @@
                 распределенную глобальную модель оказания услуг.</p>
             <!-- <button type="button" class="button-project-order button-project-order_place_projects">Заказать
                 проект</button> -->
-            <a href="discussion.html" target="_blank" class="button-project-order button-project-order_place_projects">Заказать
+            <a href="discussion.html" target="_blank"
+                class="button-project-order button-project-order_place_projects">Заказать
                 проект</a>
         </div>
     </header>
@@ -136,16 +137,19 @@
                         <div class="services__card-description">
                             <p class="services__card-description-text">Мы анализировали, когда делали проект для:</p>
                             <div class="services__card-description-img-wrapper">
-                                <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
+                                <a href="https://vroomgames.ru/" target="_blank">
+                                    <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
+                                </a>
                             </div>
                             <div class="services__card-description-offer">
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button"
+                                <a href="discussion.html" target="_blank"
+                                    class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
-                                    проект</button>
+                                    проект</a>
                             </div>
                         </div>
                     </div>
@@ -159,17 +163,23 @@
                         <div class="services__card-description">
                             <p class="services__card-description-text">Мы прототипировали, когда делали проект для:</p>
                             <div class="services__card-description-img-wrapper">
-                                <img src="images/danone_logo.svg" alt="Данон." class="services__card-description-img">
-                                <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
+                                <a href="https://www.danone.ru/" target="_blank">
+                                    <img src="images/danone_logo.svg" alt="Данон."
+                                        class="services__card-description-img">
+                                </a>
+                                <a href="https://vroomgames.ru/" target="_blank">
+                                    <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
+                                </a>
                             </div>
                             <div class="services__card-description-offer">
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button"
+                                <a href="discussion.html" target="_blank"
+                                    class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
-                                    проект</button>
+                                    проект</a>
                             </div>
                         </div>
                     </div>
@@ -183,19 +193,28 @@
                         <div class="services__card-description">
                             <p class="services__card-description-text">Мы создавали дизайн, когда делали проект для:</p>
                             <div class="services__card-description-img-wrapper">
-                                <img src="images/danone_logo.svg" alt="Данон." class="services__card-description-img">
-                                <img src="images/code_space_logo.svg" alt="Код спэйс."
-                                    class="services__card-description-img">
-                                <img src="images/actual_logo.svg" alt="Актуаль." class="services__card-description-img">
+                                <a href="https://www.danone.ru/" target="_blank">
+                                    <img src="images/danone_logo.svg" alt="Данон."
+                                        class="services__card-description-img">
+                                </a>
+                                <a href="https://codespace.com.ru/" target="_blank">
+                                    <img src="images/code_space_logo.svg" alt="Код спэйс."
+                                        class="services__card-description-img">
+                                </a>
+                                <a href="https://qiosk.ru/brand/aktuali/" target="_blank">
+                                    <img src="images/actual_logo.svg" alt="Актуаль."
+                                        class="services__card-description-img">
+                                </a>
                             </div>
                             <div class="services__card-description-offer">
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button"
+                                <a href="discussion.html" target="_blank"
+                                    class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
-                                    проект</button>
+                                    проект</a>
                             </div>
                         </div>
                     </div>
@@ -209,20 +228,31 @@
                         <div class="services__card-description">
                             <p class="services__card-description-text">Мы прогаммировали, когда делали проект для:</p>
                             <div class="services__card-description-img-wrapper">
-                                <img src="images/danone_logo.svg" alt="Данон." class="services__card-description-img">
-                                <img src="images/code_space_logo.svg" alt="Код спэйс."
-                                    class="services__card-description-img">
-                                <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
-                                <img src="images/actual_logo.svg" alt="Актуаль." class="services__card-description-img">
+                                <a href="https://www.danone.ru/" target="_blank">
+                                    <img src="images/danone_logo.svg" alt="Данон."
+                                        class="services__card-description-img">
+                                </a>
+                                <a href="https://codespace.com.ru/" target="_blank">
+                                    <img src="images/code_space_logo.svg" alt="Код спэйс."
+                                        class="services__card-description-img">
+                                </a>
+                                <a href="https://vroomgames.ru/" target="_blank">
+                                    <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
+                                </a>
+                                <a href="https://qiosk.ru/brand/aktuali/" target="_blank">
+                                    <img src="images/actual_logo.svg" alt="Актуаль."
+                                        class="services__card-description-img">
+                                </a>
                             </div>
                             <div class="services__card-description-offer">
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button"
+                                <a href="discussion.html" target="_blank"
+                                    class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
-                                    проект</button>
+                                    проект</a>
                             </div>
                         </div>
                     </div>
@@ -236,18 +266,23 @@
                         <div class="services__card-description">
                             <p class="services__card-description-text">Мы тестировали, когда делали проект для:</p>
                             <div class="services__card-description-img-wrapper">
-                                <img src="images/code_space_logo.svg" alt="Код спэйс."
-                                    class="services__card-description-img">
-                                <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
+                                <a href="https://codespace.com.ru/" target="_blank">
+                                    <img src="images/code_space_logo.svg" alt="Код спэйс."
+                                        class="services__card-description-img">
+                                </a>
+                                <a href="https://vroomgames.ru/" target="_blank">
+                                    <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
+                                </a>
                             </div>
                             <div class="services__card-description-offer">
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button"
+                                <a href="discussion.html" target="_blank"
+                                    class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
-                                    проект</button>
+                                    проект</a>
                             </div>
                         </div>
                     </div>
@@ -261,16 +296,20 @@
                         <div class="services__card-description">
                             <p class="services__card-description-text">Мы предоставляем поддержку:</p>
                             <div class="services__card-description-img-wrapper">
-                                <img src="images/danone_logo.svg" alt="Данон." class="services__card-description-img">
+                                <a href="https://www.danone.ru/" target="_blank">
+                                    <img src="images/danone_logo.svg" alt="Данон."
+                                        class="services__card-description-img">
+                                </a>
                             </div>
                             <div class="services__card-description-offer">
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button"
+                                <a href="discussion.html" target="_blank"
+                                    class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
-                                    проект</button>
+                                    проект</a>
                             </div>
                         </div>
                     </div>
