--- a/team.html
+++ b/team.html
@@ -65,52 +65,52 @@
                     участником нашей команды чуть ближе.</p>
             </div>
             <article class="business-card">
-                <img src="images/nikolay_shpakov.png" alt="николай_шпаков" class="business-card__image">
+                <img src="images/nikolay_shpakov.png" alt="Николай Шпаков." class="business-card__image">
                 <h3 class="business-card__title">Николай Шпаков</h3>
                 <p class="business-card__subtitle">Исполнительный директор</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+                <a href="https://www-linkedin.com/" target="_blank"><img src="images/icon_business-card.svg" alt="Линкедин." class="business-card__icon"></a>
             </article>
             <article class="business-card">
-                <img src="images/oleg_naumenko.png" alt="олег_науменко" class="business-card__image">
+                <img src="images/oleg_naumenko.png" alt="Олег Науменко." class="business-card__image">
                 <h3 class="business-card__title">Олег Науменко</h3>
                 <p class="business-card__subtitle">СТО</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+                <a href="https://www-linkedin.com/" target="_blank"><img src="images/icon_business-card.svg" alt="Линкедин." class="business-card__icon"></a>
             </article>
             <article class="business-card">
-                <img src="images/dmitriy_ershov.png" alt="дмитрий_ершов" class="business-card__image">
+                <img src="images/dmitriy_ershov.png" alt="Дмитрий Ершов." class="business-card__image">
                 <h3 class="business-card__title">Дмитрий Ершов</h3>
                 <p class="business-card__subtitle">Руководитель группы IOS</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+                <a href="https://www-linkedin.com/" target="_blank"><img src="images/icon_business-card.svg" alt="Линкедин." class="business-card__icon"></a>
             </article>
             <article class="business-card">
-                <img src="images/yaroslav_fomin.png" alt="ярослав_фомин" class="business-card__image">
+                <img src="images/yaroslav_fomin.png" alt="Ярослав Фомин." class="business-card__image">
                 <h3 class="business-card__title">Ярослав Фомин</h3>
                 <p class="business-card__subtitle">Специалист по подбору талантов</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+                <a href="https://www-linkedin.com/" target="_blank"><img src="images/icon_business-card.svg" alt="Линкедин." class="business-card__icon"></a>
             </article>
             <article class="business-card">
-                <img src="images/elena_goriunova.png" alt="елена_горюнова" class="business-card__image">
+                <img src="images/elena_goriunova.png" alt=">Елена Горюнова." class="business-card__image">
                 <h3 class="business-card__title">Елена Горюнова</h3>
                 <p class="business-card__subtitle">Руководитель группы дизайнеров</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+                <a href="https://www-linkedin.com/" target="_blank"><img src="images/icon_business-card.svg" alt="Линкедин." class="business-card__icon"></a>
             </article>
             <article class="business-card">
-                <img src="images/yaroslav_fomin2.png" alt="ярослав_фомин" class="business-card__image">
+                <img src="images/yaroslav_fomin2.png" alt="Ярослав Фомин." class="business-card__image">
                 <h3 class="business-card__title">Ярослав Фомин</h3>
                 <p class="business-card__subtitle">Руководитель группы контроля качества</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+                <a href="https://www-linkedin.com/" target="_blank"><img src="images/icon_business-card.svg" alt="Линкедин." class="business-card__icon"></a>
             </article>
             <article class="business-card">
-                <img src="images/nikolay_shpakov2.png" alt="николай_шпаков" class="business-card__image">
+                <img src="images/nikolay_shpakov2.png" alt="Николай Шпаков." class="business-card__image">
                 <h3 class="business-card__title">Николай Шпаков</h3>
                 <p class="business-card__subtitle">Управляющий делами</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+                <a href="https://www-linkedin.com/" target="_blank"><img src="images/icon_business-card.svg" alt="Линкедин." class="business-card__icon"></a>
             </article>
             <article class="business-card">
-                <img src="images/olga_naumenko.png" alt="ольга_науменко" class="business-card__image">
+                <img src="images/olga_naumenko.png" alt="Ольга Науменко." class="business-card__image">
                 <h3 class="business-card__title">Ольга Науменко</h3>
                 <p class="business-card__subtitle">Руководитель группы Android</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+                <a href="https://www-linkedin.com/" target="_blank"><img src="images/icon_business-card.svg" alt="Линкедин." class="business-card__icon"></a>
             </article>
         </section>
         <section class="vacancies">
