fix: correct links

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         удобные и понятные интерфейсы.</p>
                 </article>
             </div>
-            <a href="projects.html#all-services" target="_blank" class="suggestions__link">Все услуги &rarr;</a>
+            <a href="projects.html" target="_blank" class="suggestions__link">Все услуги &rarr;</a>
         </section>
         <section class="portfolio">
             <div class="portfolio__wrapper block-indent">
