--- a/projects.html
+++ b/projects.html
@@ -53,8 +53,6 @@
                 методологию Agile, проверенные на практике платформы для организации совместной работы с заказчиком,
                 передовые инструменты для разработки, многопрофильные команды специалистов с различными навыками и
                 распределенную глобальную модель оказания услуг.</p>
-            <!-- <button type="button" class="button-project-order button-project-order_place_projects">Заказать
-                проект</button> -->
             <a href="discussion.html" target="_blank"
                 class="button-project-order button-project-order_place_projects">Заказать
                 проект</a>
@@ -92,7 +90,7 @@
                 </article>
             </div>
         </section>
-        <section class="services block-indent" id="all-services">
+        <section class="services block-indent">
             <div class="services__contaner">
                 <div class="services__heading">
                     <div class="block-heading block-heading_place_projects-services">
