feat: add buttons animation effects

--- a/contact.html
+++ b/contact.html
@@ -69,19 +69,20 @@
                     <ul class="form-description__links">
                         <li><a href="https://www-linkedin.com/" target="_blank" class="form-description__link"><img
                                     src="images/social_icon_linkedin.svg" alt="Линкедин."
-                                    class="description__link-image"></a></li>
+                                    class="form-description__link-image"></a></li>
                         <li><a href="https://www.google.ru/" target="_blank" class="form-description__link"><img
-                                    src="images/social_icon_google.svg" alt="Гугл." class="description__link-image"></a>
+                                    src="images/social_icon_google.svg" alt="Гугл."
+                                    class="form-description__link-image"></a>
                         </li>
                         <li><a href="https://www.facebook.com/" target="_blank" class="form-description__link"><img
                                     src="images/social_icon_facebook.svg" alt="Фейсбук."
-                                    class="description__link-image"></a></li>
+                                    class="form-description__link-image"></a></li>
                         <li><a href="https://dribbble.com/" target="_blank" class="form-description__link"><img
                                     src="images/social_icon_dribbble.svg" alt="Дрибл."
-                                    class="description__link-image"></a></li>
+                                    class="form-description__link-image"></a></li>
                         <li><a href="https://instagram.com/" target="_blank" class="form-description__link"><img
                                     src="images/social_icon_instagram.svg" alt="Инстаграм."
-                                    class="description__link-image"></a></li>
+                                    class="form-description__link-image"></a></li>
                     </ul>
                 </div>
                 <form action="#" class="contacts__form contacts__form_place_contact-page">
@@ -95,8 +96,7 @@
                     <textarea type="text" name="message" placeholder="Сообщение"
                         class="contacts__form-input contacts__form-input_type_textarea"></textarea>
                     <div class="contacts__form-button-wrapper">
-                        <label class="form-footnote"><span
-                                class="form-footnote form-footnote_span_accent">*</span>
+                        <label class="form-footnote"><span class="form-footnote form-footnote_span_accent">*</span>
                             обязательные поля для заполнения
                             <button type="submit" class="contacts__form-button">Отправить</button></label>
                         <p class="form-footnote">Нажимая на кнопку, вы соглашаетесь с <a
