--- a/index.html
+++ b/index.html
@@ -290,19 +290,19 @@
                         <ul class="form-description__links">
                             <li><a href="https://www-linkedin.com/" target="_blank" class="form-description__link"><img
                                         src="images/social_icon_linkedin.svg" alt="Линкедин."
-                                        class="description__link-image"></a></li>
+                                        class="form-description__link-image"></a></li>
                             <li><a href="https://www.google.ru/" target="_blank" class="form-description__link"><img
                                         src="images/social_icon_google.svg" alt="Гугл."
-                                        class="description__link-image"></a></li>
+                                        class="form-description__link-image"></a></li>
                             <li><a href="https://www.facebook.com/" target="_blank" class="form-description__link"><img
                                         src="images/social_icon_facebook.svg" alt="Фейсбук."
-                                        class="description__link-image"></a></li>
+                                        class="form-description__link-image"></a></li>
                             <li><a href="https://dribbble.com/" target="_blank" class="form-description__link"><img
                                         src="images/social_icon_dribbble.svg" alt="Дрибл."
-                                        class="description__link-image"></a></li>
+                                        class="form-description__link-image"></a></li>
                             <li><a href="https://instagram.com/" target="_blank" class="form-description__link"><img
                                         src="images/social_icon_instagram.svg" alt="Инстаграм."
-                                        class="description__link-image"></a></li>
+                                        class="form-description__link-image"></a></li>
                         </ul>
                     </div>
                     <form action="#" class="contacts__form">
